// <auto-generated />
using System;
using Biblioteca.Api.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace Biblioteca.Api.Migrations
{
    [DbContext(typeof(BibliotecaContext))]
    partial class BibliotecaContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.12")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("Biblioteca.Api.Models.Bibliotecario", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Senha")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Bibliotecarios");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Emprestimo", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("BibliotecarioId")
                        .HasColumnType("int");

                    b.Property<DateOnly?>("DataDevolucao")
                        .HasColumnType("date");

                    b.Property<DateOnly>("DataEmprestimo")
                        .HasColumnType("date");

                    b.Property<DateOnly>("DataPrevistaDevolucao")
                        .HasColumnType("date");

                    b.Property<int>("EstudanteId")
                        .HasColumnType("int");

                    b.Property<int>("ExemplarId")
                        .HasColumnType("int");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("BibliotecarioId");

                    b.HasIndex("EstudanteId");

                    b.HasIndex("ExemplarId");

                    b.ToTable("Emprestimos");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Estudante", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("EmailInstitucional")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Senha")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("StatusConta")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("TurmaId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("TurmaId");

                    b.ToTable("Estudantes");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Exemplar", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int?>("LivroId")
                        .HasColumnType("int");

                    b.Property<string>("codigoIdentificacao")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("status")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("LivroId");

                    b.ToTable("Exemplares");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Livro", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Autor")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Categoria")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Isbn")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Titulo")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Livros");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Multa", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("DiasAtraso")
                        .HasColumnType("int");

                    b.Property<int>("EmprestimoId")
                        .HasColumnType("int");

                    b.Property<int>("EstudanteId")
                        .HasColumnType("int");

                    b.Property<decimal>("Valor")
                        .HasPrecision(10, 2)
                        .HasColumnType("decimal(10,2)");

                    b.HasKey("Id");

                    b.HasIndex("EmprestimoId")
                        .IsUnique();

                    b.HasIndex("EstudanteId");

                    b.ToTable("Multas");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Reserva", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateOnly>("DataReserva")
                        .HasColumnType("date");

                    b.Property<int>("EstudanteId")
                        .HasColumnType("int");

                    b.Property<int>("LivroId")
                        .HasColumnType("int");

                    b.Property<int>("PosicaoFila")
                        .HasColumnType("int");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.HasIndex("EstudanteId");

                    b.HasIndex("LivroId");

                    b.ToTable("Reservas");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Turma", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("AnoLetivo")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Turno")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Turmas");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Emprestimo", b =>
                {
                    b.HasOne("Biblioteca.Api.Models.Bibliotecario", "Bibliotecario")
                        .WithMany("Emprestimos")
                        .HasForeignKey("BibliotecarioId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Biblioteca.Api.Models.Estudante", "Estudante")
                        .WithMany("Emprestimos")
                        .HasForeignKey("EstudanteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Biblioteca.Api.Models.Exemplar", "Exemplar")
                        .WithMany("Emprestimos")
                        .HasForeignKey("ExemplarId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Bibliotecario");

                    b.Navigation("Estudante");

                    b.Navigation("Exemplar");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Estudante", b =>
                {
                    b.HasOne("Biblioteca.Api.Models.Turma", "Turma")
                        .WithMany("Estudantes")
                        .HasForeignKey("TurmaId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Turma");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Exemplar", b =>
                {
                    b.HasOne("Biblioteca.Api.Models.Livro", null)
                        .WithMany("Exemplares")
                        .HasForeignKey("LivroId");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Multa", b =>
                {
                    b.HasOne("Biblioteca.Api.Models.Emprestimo", "Emprestimo")
                        .WithOne("Multa")
                        .HasForeignKey("Biblioteca.Api.Models.Multa", "EmprestimoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Biblioteca.Api.Models.Estudante", "Estudante")
                        .WithMany("Multas")
                        .HasForeignKey("EstudanteId")
                        .OnDelete(DeleteBehavior.NoAction)
                        .IsRequired();

                    b.Navigation("Emprestimo");

                    b.Navigation("Estudante");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Reserva", b =>
                {
                    b.HasOne("Biblioteca.Api.Models.Estudante", "Estudante")
                        .WithMany("Reservas")
                        .HasForeignKey("EstudanteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Biblioteca.Api.Models.Livro", "Livro")
                        .WithMany("Reservas")
                        .HasForeignKey("LivroId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Estudante");

                    b.Navigation("Livro");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Bibliotecario", b =>
                {
                    b.Navigation("Emprestimos");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Emprestimo", b =>
                {
                    b.Navigation("Multa");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Estudante", b =>
                {
                    b.Navigation("Emprestimos");

                    b.Navigation("Multas");

                    b.Navigation("Reservas");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Exemplar", b =>
                {
                    b.Navigation("Emprestimos");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Livro", b =>
                {
                    b.Navigation("Exemplares");

                    b.Navigation("Reservas");
                });

            modelBuilder.Entity("Biblioteca.Api.Models.Turma", b =>
                {
                    b.Navigation("Estudantes");
                });
#pragma warning restore 612, 618
        }
    }
}
